# stackit-database-validation

./: .gitignore  README.md  action.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py  test_main.py
